final fix nav + features spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -78,6 +78,14 @@ img {
 .menu-link {
     display: block;
     padding: 24px 0;
+    position: relative;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        font-weight: 500;
+            font-size: 16px;
+            line-height: 1.5;
+            letter-spacing: 0.02em;
+            color: #2e2f42;
+    
 }
 
 .contacts {
@@ -396,10 +404,7 @@ background-color: #ffffff;
     fill: #f4f4fd;
 }
 
-.menu-link {
-    position: relative;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+
 
 .menu-link:hover,
 .menu-link:focus {
@@ -443,7 +448,7 @@ background-color: #ffffff;
     background-color: #f4f4fd;
     border: 1px solid #8e8f99;
     border-radius: 4px;
-    gap: 24px;
+    margin-bottom: 8px;
 }
 
 .footer-container {
